--- a/frontend/index.html
+++ b/frontend/index.html
@@ -181,7 +181,7 @@
                 <div class="col-lg-12">
                     <div class="card">
                         <div class="gmap_unix card-body" style="height:60vh; width:100vm; padding: 0;">
-                            <input id="pac-input" class="controls" type="text" placeholder="Search for Region">
+                            <!-- <input id="pac-input" class="controls" type="text" placeholder="Search for Region"> -->
                             <div id="map"></div>
                         </div>
 
@@ -396,11 +396,11 @@
 
 
 
-    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCuIU9EZkB51n_fxgyKNyqF36Wz49ZOXSo&callback=initMap">
-        async defer ></script> -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCuIU9EZkB51n_fxgyKNyqF36Wz49ZOXSo&callback=initMap">
+        async defer ></script>
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCuIU9EZkB51n_fxgyKNyqF36Wz49ZOXSo&libraries=places&callback=initAutocomplete"
-        async defer></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCuIU9EZkB51n_fxgyKNyqF36Wz49ZOXSo&libraries=places&callback=initAutocomplete"
+        async defer></script> -->
 
 
     <script>
