--- a/frontend/index.html
+++ b/frontend/index.html
@@ -440,7 +440,7 @@
 
     <script src="assets/js/credentials.js"></script>
     <script src="assets/js/index.js"></script>
-    <script src="assets/js/FeatureCollection.js"></script>
+    <script src="../FeatureCollection.js"></script>
 
 
 
