--- a/frontend/index.html
+++ b/frontend/index.html
@@ -201,16 +201,7 @@
                 </div>
             </div> <!-- /.row -->
 
-            <div class="card">
-                <div class="card-header">
-                    <strong class="card-title">Data Table</strong>
-                </div>
-                <div class="card-body">
-                    <table id="chartData" class="table table-striped table-bordered" width="100%"></table>
-                </div>
-            </div>
 
-            
             <!-- Widgets  -->
             <div class="row">
                 <div class="col-lg-3">
@@ -218,12 +209,12 @@
                         <div class="card-body">
                             <div class="stat-widget-five">
                                 <div class="stat-icon dib flat-color-1">
-                                    <i class="fa fa-repeat"></i>
+                                    <i class="fa fa-home"></i>
                                 </div>
                                 <div class="stat-content">
                                     <div class="text-left dib">
-                                        <div class="stat-text"><span class="publicOffenses" class="count">0</span></div>
-                                        <div class="stat-heading">Relevance</div>
+                                        <div class="stat-text"><span class="settlements" class="count">0</span></div>
+                                        <div class="stat-heading">Settlements</div>
                                     </div>
                                 </div>
                             </div>
@@ -234,12 +225,12 @@
                         <div class="card-body">
                             <div class="stat-widget-five">
                                 <div class="stat-icon dib flat-color-2">
-                                    <i class="ti ti-eye"></i>
+                                    <i class="fa fa-globe"></i>
                                 </div>
                                 <div class="stat-content">
                                     <div class="text-left dib">
-                                        <div class="stat-text"><span class="traffic" class="count">0</span></div>
-                                        <div class="stat-heading">Famine</div>
+                                        <div class="stat-text"><span class="geographical" class="count">0</span></div>
+                                        <div class="stat-heading">Geographical</div>
                                     </div>
                                 </div>
                             </div>
@@ -251,12 +242,12 @@
                         <div class="card-body">
                             <div class="stat-widget-five">
                                 <div class="stat-icon dib flat-color-4">
-                                    <i class="fa fa-chain-broken"></i>
+                                    <i class="fa fa-users"></i>
                                 </div>
                                 <div class="stat-content">
                                     <div class="text-left dib">
-                                        <div class="stat-text"><span class="theft" class="count">0</span></div>
-                                        <div class="stat-heading">War</div>
+                                        <div class="stat-text"><span class="people" class="count">0</span></div>
+                                        <div class="stat-heading">People</div>
                                     </div>
                                 </div>
                             </div>
@@ -267,12 +258,12 @@
                         <div class="card-body">
                             <div class="stat-widget-five">
                                 <div class="stat-icon dib flat-color-3">
-                                    <i class="ti ti-anchor"></i>
+                                    <i class="fa fa-anchor"></i>
                                 </div>
                                 <div class="stat-content">
                                     <div class="text-left dib">
-                                        <div class="stat-text"><span class="violence" class="count">0</span></div>
-                                        <div class="stat-heading">Voyages</div>
+                                        <div class="stat-text"><span class="other" class="count">0</span></div>
+                                        <div class="stat-heading">Other</div>
                                     </div>
                                 </div>
                             </div>
@@ -299,8 +290,18 @@
             </div>
             <!-- Widgets End -->
 
+            
+            <div class="card">
+                <div class="card-header">
+                    <strong class="card-title">Data Table</strong>
+                </div>
+                <div class="card-body">
+                    <table id="chartData" class="table table-striped table-bordered" width="100%"></table>
+                </div>
+            </div>
+
             <!--  Development over Time different categories  -->
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-lg-12">
                     <div class="card">
                         <div class="card-body">
@@ -309,7 +310,6 @@
                         <div class="row">
                             <div class="col-lg-8">
                                 <div class="card-body">
-                                    <!-- <canvas id="TrafficChart"></canvas>   -->
                                     <div id="traffic-chart" class="traffic-chart"></div>
                                 </div>
                             </div>
@@ -347,14 +347,13 @@
                                                 aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                                         </div>
                                     </div>
-                                </div> <!-- /.card-body -->
+                                </div> 
                             </div>
-                        </div> <!-- /.row -->
+                        </div> 
                         <div class="card-body"></div>
                     </div>
-                </div><!-- /# column -->
-            </div>
-            <!--  /Traffic -->
+                </div>
+            </div> -->
 
         </div> <!-- .content -->
 
@@ -463,11 +462,10 @@
 
                 // Pie chart flotPie1 
                 var piedata = [
-                    { label: "Public", data: 1, color: '#1EC193' },
-                    { label: "Traffic", data: 1, color: '#AB8EE1' },
-                    { label: "Theft", data: 1, color: '#1EAAF0' },
-                    { label: "Violence", data: 1, color: '#F9967C' },
-                    { label: "Undef.", data: 1, color: '#686868' }
+                    { label: "Settlements", data: 1, color: '#1EC193' },
+                    { label: "Geograph.", data: 1, color: '#AB8EE1' },
+                    { label: "People", data: 1, color: '#F9967C' },
+                    { label: "Other", data: 1, color: '#1EAAF0' }
                 ];
 
                 var plot = $.plot('#flotPie1', piedata, {
@@ -550,11 +548,10 @@
 
                 // Pie chart flotPie1 
                 var newPiedata = [
-                    { label: "Public" + "\t" + countCategory.publicOffenses, data: countCategory.publicOffenses, color: '#1EC193' },
-                    { label: "Traffic" + "\t" + countCategory.traffic, data: countCategory.traffic, color: '#AB8EE1' },
-                    { label: "Theft" + "\t" + countCategory.theft, data: countCategory.theft, color: '#1EAAF0' },
-                    { label: "Violence" + "\t" + countCategory.violence, data: countCategory.violence, color: '#F9967C' },
-                    { label: "Undef." + "\t" + countCategory.undefined, data: countCategory.undefined, color: '#686868' }
+                    { label: "Settlem." + "\t" + countCategory.settlements, data: countCategory.settlements, color: '#1EC193' },
+                    { label: "Geo." + "\t" + countCategory.geographical, data: countCategory.geographical, color: '#AB8EE1' },
+                    { label: "People" + "\t" + countCategory.people, data: countCategory.people, color: '#F9967C' },
+                    { label: "Other" + "\t" + countCategory.other, data: countCategory.other, color: '#1EAAF0' }
                 ];
 
                 var plot = $.plot('#flotPie1', newPiedata, {
