functions for war and croesus topics

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -96,7 +96,7 @@
                         <button id="placesButton" type="button" class="btn btn-light">
                             <span class="menu-icon fa fa-folder-open"></span> Places
                         </button>
-                        <button id="otherButton" type="button" class="btn btn-light">
+                        <button id="warButton" type="button" class="btn btn-light">
                             <span class="menu-icon fa fa-folder-open"></span> War
                         </button>
                         <hr>
@@ -440,6 +440,8 @@
     <script src="assets/js/credentials.js"></script>
     <script src="assets/js/index.js"></script>
     <script src="../FeatureCollection.js"></script>
+    <script src="../War.js"></script>
+
 
 
 
