--- a/frontend/index.html
+++ b/frontend/index.html
@@ -99,6 +99,9 @@
                         <button id="warButton" type="button" class="btn btn-light">
                             <span class="menu-icon fa fa-folder-open"></span> War
                         </button>
+                        <button id="croesusButton" type="button" class="btn btn-light">
+                            <span class="menu-icon fa fa-folder-open"></span> Croesus
+                        </button>
                         <hr>
 
                     <li><a href="https://pleiades.stoa.org/"><i class="menu-icon fa fa-folder-open"></i>Pleiades
@@ -441,6 +444,8 @@
     <script src="assets/js/index.js"></script>
     <script src="../FeatureCollection.js"></script>
     <script src="../War.js"></script>
+    <script src="../croesus.js"></script>
+
 
 
 
