--- a/frontend/index.html
+++ b/frontend/index.html
@@ -548,12 +548,10 @@
                 // Traffic Chart using chartist
                 if ($('#traffic-chart').length) {
                     var chart = new Chartist.Line('#traffic-chart', {
-                        labels: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun'],
+                        labels: ['Chapter', 'Next Chapter'],
                         series: [
                             [0, 18000, 35000, 25000, 22000, 0],
-                            [0, 33000, 15000, 20000, 15000, 300],
-                            [0, 15000, 28000, 15000, 30000, 5000]
-                        ]
+                            [0, 33000, 15000, 20000, 15000, 300]                        ]
                     }, {
                             low: 0,
                             showArea: true,
