--- a/frontend/index.html
+++ b/frontend/index.html
@@ -313,7 +313,7 @@
                 <div class="col-lg-12">
                     <div class="card">
                         <div class="card-body">
-                            <h4 class="box-title">Development over time </h4>
+                            <h4 class="box-title">Occurences in the texts</h4>
                             <div class="row">
                                 <div class="col-lg-10">
                                     <select id="selectPlaces" class="card-body js-example-basic-multiple"
@@ -323,11 +323,11 @@
                                     </select>
                                 </div>
                                 <div class="col-lg-2">
-                                    <button id="clearPlacesTimeButton" type="button" class="btn btn-light">
-                                        <span class="menu-icon fa fa-trash"></span> Clear
-                                    </button>
                                     <button id="placesTimeButton" type="button" class="btn btn-light">
                                         <span class="menu-icon fa fa-check-circle"></span> Show
+                                    </button>
+                                    <button id="clearPlacesTimeButton" type="button" class="btn btn-light">
+                                        <span class="menu-icon fa fa-trash"></span> Clear
                                     </button>
                                 </div>
                             </div>
