Readme and delete unnecessary HTML Templates

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -101,7 +101,7 @@
                     <li>
                         <a>Choose a topic to load the corresponding analysis and display the results</a>
                         <button id="placesButton" type="button" class="pleiabtn btn btn-light">
-                            <span class="menu-icon fa fa-folder-open"></span> Places
+                            <span class="menu-icon fa fa-folder-open"></span> All Places
                         </button>
                         <button id="warButton" type="button" class="pleiabtn btn btn-light">
                             <span class="menu-icon fa fa-folder-open"></span> War
